--- a/templates/roll/roll-spell.html
+++ b/templates/roll/roll-spell.html
@@ -55,7 +55,18 @@
         <div class="flexrow flex-group-center">
             <label class="resource-label">Bonus ({{ data.roll.bonus }})</label>
         </div>
-
+        <div class="flexrow flex-group-center">
+            <label class="resource-label">+</label>
+        </div>
+        <div class="flexrow flex-group-center">
+            <label class="resource-label">{{localize "arm5e.sheet.magic.voice"}} ({{ data.roll.voice }})</label>
+        </div>
+        <div class="flexrow flex-group-center">
+            <label class="resource-label">+</label>
+        </div>
+        <div class="flexrow flex-group-center">
+            <label class="resource-label">{{localize "arm5e.sheet.magic.gestures"}} ({{ data.roll.gestures }})</label>
+        </div>
         <div class="flexrow flex-group-center">
             <label class="resource-label">+</label>
         </div>
