--- a/templates/actor/actor-pc-sheet.html
+++ b/templates/actor/actor-pc-sheet.html
@@ -5,7 +5,9 @@
 
   {{!-- Sheet Header --}}
   <header class="sheet-header">
-    <img class="profile-img" src="{{actor.img}}" data-edit="img" title="{{actor.name}}" height="100" width="100" />
+    <div class="profile-img">
+      <img  src="{{actor.img}}" data-edit="img" title="{{actor.name}}"  />
+    </div>
     <div class="header-fields">
       <h1 class="charname"><input name="name" type="text" value="{{actor.name}}" placeholder="Name" /></h1>
 
